shared/utils: systemd-cgls shows 'n/a' when piping output

-1 was used to signal failure, but the type was unsigned.

https://bugs.freedesktop.org/show_bug.cgi?id=56644